postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: devopschallenge
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
